[gd_scene load_steps=35 format=2]

[ext_resource path="res://Texture/background/b2/Hills Layer 05.png" type="Texture" id=1]
[ext_resource path="res://Texture/background/b2/Hills Layer 03.png" type="Texture" id=2]
[ext_resource path="res://Texture/background/b2/Hills Layer 01.png" type="Texture" id=3]
[ext_resource path="res://Texture/background/b2/Hills Layer 04.png" type="Texture" id=4]
[ext_resource path="res://Texture/background/b2/Hills Layer 02.png" type="Texture" id=5]
[ext_resource path="res://Texture/background/b2/Hills Layer 06.png" type="Texture" id=6]
[ext_resource path="res://UI/GameLevel/Leve_1.gd" type="Script" id=7]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_15.png" type="Texture" id=8]
[ext_resource path="res://Font/mplus_hzk_12.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Shaders/SimpleBlur.tres" type="Material" id=10]
[ext_resource path="res://UI/ScrollContainer.gd" type="Script" id=11]
[ext_resource path="res://UI/GameLevel/ChooseUI.gd" type="Script" id=12]
[ext_resource path="res://Texture/hud/p_s_s.png" type="Texture" id=14]
[ext_resource path="res://Font/SC-Medium.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://UI/GameResult.gd" type="Script" id=16]
[ext_resource path="res://UI/UILayer.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.75, 28 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 810, 14 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=18]
size = 20
extra_spacing_top = 8
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 2
outline_color = Color( 0.603922, 0.6, 0.6, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
outline_size = 2
outline_color = Color( 0.603922, 0.6, 0.6, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 13
outline_size = 1
outline_color = Color( 0.47451, 0.466667, 0.466667, 1 )
extra_spacing_top = 2
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 25
extra_spacing_top = 2
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.235294, 0.231373, 0.231373, 0.392157 )

[sub_resource type="DynamicFont" id=12]
size = 24
outline_size = 2
outline_color = Color( 0.603922, 0.6, 0.6, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=13]
outline_size = 2
outline_color = Color( 0.603922, 0.6, 0.6, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
outline_color = Color( 0.603922, 0.6, 0.6, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
size = 13
outline_size = 2
outline_color = Color( 0.411765, 0.4, 0.4, 1 )
extra_spacing_top = 1
extra_spacing_char = 1
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 144, 64 )
margin_left = 13.0
margin_right = 16.0
margin_top = 12.0
margin_bottom = 28.0

[sub_resource type="DynamicFont" id=17]
size = 24
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 680, 240 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 680, 240 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 680, 240 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 680, 240 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 1448, 581 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 416, 581 )

[node name="StaticBody2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 501.25, 562 )
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 658, 242 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="StaticBody2D"]
position = Vector2( 658, 242 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 801, 607 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChooseUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ChooseUI"]
material = ExtResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.33484
margin_bottom = -1.33484
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ChooseUI/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -140.0
margin_right = 672.0
margin_bottom = -116.0
custom_fonts/font = SubResource( 2 )
text = "请选择出战英雄"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/ChooseUI/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -188.0
margin_right = 672.0
margin_bottom = -137.0
custom_fonts/font = SubResource( 2 )
text = "选择一名英雄出战，坚持的时间越久奖励越丰富！
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/ChooseUI/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = 100.5
margin_right = 672.0
margin_bottom = 273.5
custom_fonts/font = SubResource( 18 )
text = "玩法说明：需要玩家选择一名冒险者出战，冒险者只有一次生命，坚持到每回合结束即可获得奖励
增益技能说明：所有自身增益技能不论位置全部会增加到自己身上！
伤害技能说明：技能不论概率点击后只会触发一次，全体类技能能对所有在场怪物造成伤害
其他对前后排单体技能只会对前一前二只怪物造成伤害
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/ChooseUI/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -244.0
margin_right = 672.0
margin_bottom = -211.0
custom_fonts/font = SubResource( 3 )
text = "无尽荒漠挑战"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ChooseUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -619.5
margin_top = -82.0
margin_right = 619.5
margin_bottom = 50.0
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HBoxContainer" parent="CanvasLayer/ChooseUI/ScrollContainer"]
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control"]
material = ExtResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -411.0
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="count" type="Label" parent="CanvasLayer/Control/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -68.0
margin_right = 672.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 5 )
text = "当前战斗波数：1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all_count" type="Label" parent="CanvasLayer/Control/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = 4.0
margin_right = 672.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 6 )
text = "剩余敌人："
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all_count2" type="Label" parent="CanvasLayer/Control/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = 52.0
margin_right = 672.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 6 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
margin_top = 240.0
margin_right = 1334.0
margin_bottom = 305.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fail" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/fail"]
material = ExtResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="count" type="Label" parent="CanvasLayer/fail/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -68.0
margin_right = 672.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 5 )
text = "挑战失败！"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all_count" type="Label" parent="CanvasLayer/fail/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = 4.0
margin_right = 672.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 6 )
text = "点击任意处返回主世界"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="NinePatchRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -105.0
margin_right = 197.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( -585, 242.5 )
mouse_filter = 0
texture = ExtResource( 8 )
patch_margin_left = 31
patch_margin_top = 43
patch_margin_right = 35
patch_margin_bottom = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/win"]
margin_right = 390.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 7 )
text = "回合胜利奖励"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -42.0
margin_right = 195.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 8 )
text = "3秒后开始下一轮战斗"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/win"]
margin_left = 26.0
margin_top = 100.0
margin_right = 359.0
margin_bottom = 192.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource( 17 )

[node name="ItemShow" type="ScrollContainer" parent="UILayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -200.5
margin_right = 300.0
margin_bottom = 276.5
mouse_filter = 2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/ItemShow"]
margin_bottom = 14.0
alignment = 2

[node name="Label" type="Label" parent="UILayer/ItemShow/VBoxContainer"]
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="UILayer/ItemShow"]
wait_time = 3.0

[node name="chat" type="RichTextLabel" parent="UILayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -241.0
margin_top = 104.0
margin_right = -10.0
margin_bottom = 194.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UILayer/chat"]
wait_time = 2.0
one_shot = true

[node name="addBox" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="UILayer"]
visible = false
anchor_right = 1.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UILayer/msg"]
wait_time = 2.0
one_shot = true

[node name="GameResult" type="Control" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UILayer/GameResult"]
material = ExtResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.33484
margin_bottom = -1.33484
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fail" type="NinePatchRect" parent="UILayer/GameResult"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -38.0
margin_right = 197.0
margin_bottom = 38.0
mouse_filter = 0
texture = ExtResource( 8 )
patch_margin_left = 31
patch_margin_top = 43
patch_margin_right = 35
patch_margin_bottom = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/GameResult/fail"]
margin_right = 390.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 12 )
text = "战斗失败！"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="NinePatchRect" parent="UILayer/GameResult"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -72.0
margin_right = 197.0
margin_bottom = 72.0
mouse_filter = 0
texture = ExtResource( 8 )
patch_margin_left = 31
patch_margin_top = 43
patch_margin_right = 35
patch_margin_bottom = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/GameResult/win"]
margin_right = 390.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 12 )
text = "战斗胜利！"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UILayer/GameResult/win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -2.0
margin_right = 195.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 13 )
text = "解锁新的关卡"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UILayer/GameResult"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = 229.0
margin_right = 195.0
margin_bottom = 265.0
custom_fonts/font = SubResource( 14 )
text = "点击任意空白处关闭"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UILayer/GameResult"]
wait_time = 2.0
one_shot = true

[node name="Tips" type="Label" parent="UILayer"]
visible = false
margin_left = 711.0
margin_top = 433.0
margin_right = 902.0
margin_bottom = 493.0
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "打算大阿松大是"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameProgress" type="ColorRect" parent="UILayer"]
visible = false
material = ExtResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -234.3, 96.1154 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/GameProgress"]
anchor_right = 1.0
margin_top = 176.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 17 )
text = "正在加载地图中..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pg" type="Label" parent="UILayer/GameProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -12.0
margin_right = 672.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 17 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="StaticBody2D2" to="." method="_on_StaticBody2D2_body_entered"]
[connection signal="gui_input" from="CanvasLayer/fail/ColorRect2" to="." method="_on_ColorRect2_gui_input"]
[connection signal="gui_input" from="CanvasLayer/win" to="." method="_on_win_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="UILayer/msg/Timer" to="UILayer" method="_on_Timer_timeout"]
[connection signal="gui_input" from="UILayer/GameResult/ColorRect" to="UILayer" method="_on_ColorRect_gui_input"]
[connection signal="timeout" from="UILayer/GameResult/Timer" to="UILayer/GameResult" method="_on_Timer_timeout"]
